# EDSMF

./: .gitignore  README.md  preprocess.ipynb  sector_preprocess.ipynb  study.ipynb  visualization.ipynb
political_analyst/: README.md  candidate_analysis.md  final_report.md  market_analysis.md  news_analysis.md  pyproject.toml
political_analyst/src/political_analyst/: crew.py  main.py
political_analyst/src/political_analyst/config/: agents.yaml  tasks.yaml
src/: ensemble_train.py  modify_train.py  run_ensemble_experiments.py  run_experiment.py  train.py
